--- a/air-conditioning.html
+++ b/air-conditioning.html
@@ -116,7 +116,7 @@
             <ul class="dropdown-content">
               <li>
                 <a
-                  href="./service-catalog.html#dvigatel"
+                  href="./remont-dvigatelya.html"
                   data-translate="nav-item-dvig"
                   >Двигун</a
                 >
@@ -128,39 +128,38 @@
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#electrika"
+                  href="./remont-elektriki.html"
                   data-translate="nav-item-elektro"
                   >Електрика</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#tormoznaja"
+                  href="./remont-tormoznoi-sistemy.html"
                   data-translate="nav-item-torm"
                   >Гальмівна система</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#transmisija"
+                  href="./remont-transmissii.html"
                   data-translate="nav-item-trans"
                   >Трансмісія</a
                 >
               </li>
               <li>
-                <a
-                  href="./service-catalog.html#servisnoe"
-                  data-translate="nav-item-to"
+                <a href="./technical-service.html" data-translate="nav-item-to"
                   >Технічне обслуговування</a
                 >
               </li>
-              <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li>
-                <a href="" data-translate="nav-item-diagn">Діагностика</a>
+                <a href="./car-diagnostics.html" data-translate="nav-item-diagn"
+                  >Діагностика</a
+                >
               </li>
               <li>
-                <a href="" data-translate="nav-item-chip"
-                  >Програмне тюнінгування</a
+                <a href="./air-conditioning.html" data-translate="nav-item-chip"
+                  >Автокондиционеры</a
                 >
               </li>
             </ul>
@@ -224,7 +223,7 @@
         <section class="hero-price-section">
           <div>
             <div class="hero-content">
-              <h1 class="hero-title" data-translate="hero-title-dvigatel">
+              <h1 class="hero-title" data-translate="hero-title-condi">
                 РЕМОНТ ЗАПРАВКА И ОБСЛУЖИВАНИЕ КОНДИЦИОНЕРОВ
               </h1>
               <div class="hero-content-container">
@@ -243,7 +242,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <h3 data-translate="hero-content-dvigatel1">
+                  <h3 data-translate="hero-content-condi1">
                     Комплексная диагностика.
                   </h3>
                 </div>
@@ -262,7 +261,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <h3 data-translate="hero-content-dvigatel2">
+                  <h3 data-translate="hero-content-condi2">
                     Заправка автокондиционера.
                   </h3>
                 </div>
@@ -281,7 +280,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <h3 data-translate="hero-content-dvigatel3">
+                  <h3 data-translate="hero-content-condi3">
                     Замена компрессора кондиционера.
                   </h3>
                 </div>
@@ -328,16 +327,16 @@
           </div>
         </section>
         <section class="gbo-section">
-          <h2 data-translate="dvigatel-section-title">
+          <h2 data-translate="condi-section-title">
             Ремонт и заправка автокондиционеров в Павлограде
           </h2>
           <div class="main-gbo">
             <div class="main-gbo-content">
               <p>
-                <span class="gbo-span" data-translate="dvigatel-span"
+                <span class="gbo-span" data-translate="condi-span1"
                   >Вернем холод в ваш автомобиль! В СТО "Каскад"
                 </span>
-                <span data-translate="dvigatel-span2">
+                <span data-translate="condi-span2">
                   проводим полную диагностику, ремонт и заправку систем
                   кондиционирования любой сложности. Используем профессиональное
                   оборудование и качественные хладагенты, чтобы обеспечить
@@ -361,7 +360,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list1"
+                  <span data-translate="condi-list1"
                     ><h3>
                       Чистка и дезинфекция системы кондиционирования.
                     </h3></span
@@ -382,7 +381,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list2"
+                  <span data-translate="condi-list2"
                     ><h3>Ремонт радиатора (конденсера) кондиционера.</h3></span
                   >
                 </li>
@@ -401,7 +400,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list3"
+                  <span data-translate="condi-list3"
                     ><h3>
                       Замена ресивера-осушителя и расширительного клапана.
                     </h3></span
@@ -422,7 +421,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list4"
+                  <span data-translate="condi-list4"
                     ><h3>Устранение утечек в магистралях.</h3></span
                   >
                 </li>
@@ -441,7 +440,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list5"
+                  <span data-translate="condi-list5"
                     ><h3>Замена масла в КПП и редукторах.</h3></span
                   >
                 </li>
@@ -535,7 +534,7 @@
               </li>
             </ul>
           </div>
-          <h3 class="dvigatel-span">
+          <h3 class="dvigatel-span" data-translate="condi-title-price">
             Прайс лист автокондиционера в Павлограде:
           </h3>
           <table>
