--- a/remont-hodovoy.html
+++ b/remont-hodovoy.html
@@ -110,7 +110,7 @@
             <ul class="dropdown-content">
               <li>
                 <a
-                  href="./service-catalog.html#dvigatel"
+                  href="./remont-dvigatelya.html"
                   data-translate="nav-item-dvig"
                   >Двигун</a
                 >
@@ -122,39 +122,38 @@
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#electrika"
+                  href="./remont-elektriki.html"
                   data-translate="nav-item-elektro"
                   >Електрика</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#tormoznaja"
+                  href="./remont-tormoznoi-sistemy.html"
                   data-translate="nav-item-torm"
                   >Гальмівна система</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#transmisija"
+                  href="./remont-transmissii.html"
                   data-translate="nav-item-trans"
                   >Трансмісія</a
                 >
               </li>
               <li>
-                <a
-                  href="./service-catalog.html#servisnoe"
-                  data-translate="nav-item-to"
+                <a href="./technical-service.html" data-translate="nav-item-to"
                   >Технічне обслуговування</a
                 >
               </li>
-              <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li>
-                <a href="" data-translate="nav-item-diagn">Діагностика</a>
+                <a href="./car-diagnostics.html" data-translate="nav-item-diagn"
+                  >Діагностика</a
+                >
               </li>
               <li>
-                <a href="" data-translate="nav-item-chip"
-                  >Програмне тюнінгування</a
+                <a href="./air-conditioning.html" data-translate="nav-item-chip"
+                  >Автокондиционеры</a
                 >
               </li>
             </ul>
@@ -218,7 +217,7 @@
         <section class="hero-price-section">
           <div>
             <div class="hero-content">
-              <h1 class="hero-title" data-translate="hero-title-dvigatel">
+              <h1 class="hero-title" data-translate="hero-title-hodovaya">
                 РЕМОНТ ХОДОВОЙ В ПАВЛОГРАДЕ
               </h1>
               <div class="hero-content-container">
@@ -237,7 +236,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-dvigatel1">
+                  <p data-translate="hero-content-hodovaya1">
                     Диагностика и восстановление подвески!
                   </p>
                 </div>
@@ -256,7 +255,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-dvigatel2">
+                  <p data-translate="hero-content-hodovaya2">
                     Быстрая замена амортизаторов и рычагов!
                   </p>
                 </div>
@@ -275,7 +274,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-dvigatel3">
+                  <p data-translate="hero-content-hodovaya3">
                     Гарантия качества на все работы!
                   </p>
                 </div>
@@ -322,16 +321,16 @@
           </div>
         </section>
         <section class="gbo-section">
-          <h2 data-translate="dvigatel-section-title">
+          <h2 data-translate="hodovaya-section-title">
             Ремонт ходовой на «АС КАСКАД»
           </h2>
           <div class="main-gbo">
             <div class="main-gbo-content">
               <p>
-                <span class="gbo-span" data-translate="dvigatel-span"
-                  >В нашем СТО “Каскад”
+                <span class="gbo-span" data-translate="hodovaya-span"
+                  >В нашем СТО «КАСКАД»
                 </span>
-                <span data-translate="dvigatel-span2">
+                <span data-translate="hodovaya-span2">
                   в Павлограде вы можете провести полную диагностику и ремонт
                   ходовой части автомобиля. Мы выполняем замену амортизаторов,
                   рычагов, шаровых опор, сайлентблоков, ступичных подшипников и
@@ -357,7 +356,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list1"
+                  <span data-translate="hodovaya-list1"
                     ><h3>
                       Диагностика подвески и выявление неисправностей.
                     </h3></span
@@ -378,7 +377,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list2"
+                  <span data-translate="hodovaya-list2"
                     ><h3>Замена амортизаторов и стоек стабилизатора.</h3></span
                   >
                 </li>
@@ -397,7 +396,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list3"
+                  <span data-translate="hodovaya-list3"
                     ><h3>Замена рычагов, шаровых опор и втулок.</h3></span
                   >
                 </li>
@@ -416,7 +415,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list4"
+                  <span data-translate="hodovaya-list4"
                     ><h3>Замена ступичных подшипников.</h3></span
                   >
                 </li>
@@ -435,7 +434,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list5"
+                  <span data-translate="hodovaya-list5"
                     ><h3>Проверка и регулировка развал-схождения.</h3></span
                   >
                 </li>
@@ -538,7 +537,7 @@
               </li>
             </ul>
           </div>
-          <p class="dvigatel-span">
+          <p class="dvigatel-span" data-translate="hodovaya-title-price">
             Прайс лист на ремонт ходовой части в Павлограде СТО «Каскад»:
           </p>
           <table>
