--- a/remont-tormoznoi-sistemy.html
+++ b/remont-tormoznoi-sistemy.html
@@ -122,7 +122,7 @@
             <ul class="dropdown-content">
               <li>
                 <a
-                  href="./service-catalog.html#dvigatel"
+                  href="./remont-dvigatelya.html"
                   data-translate="nav-item-dvig"
                   >Двигун</a
                 >
@@ -134,39 +134,38 @@
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#electrika"
+                  href="./remont-elektriki.html"
                   data-translate="nav-item-elektro"
                   >Електрика</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#tormoznaja"
+                  href="./remont-tormoznoi-sistemy.html"
                   data-translate="nav-item-torm"
                   >Гальмівна система</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#transmisija"
+                  href="./remont-transmissii.html"
                   data-translate="nav-item-trans"
                   >Трансмісія</a
                 >
               </li>
               <li>
-                <a
-                  href="./service-catalog.html#servisnoe"
-                  data-translate="nav-item-to"
+                <a href="./technical-service.html" data-translate="nav-item-to"
                   >Технічне обслуговування</a
                 >
               </li>
-              <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li>
-                <a href="" data-translate="nav-item-diagn">Діагностика</a>
+                <a href="./car-diagnostics.html" data-translate="nav-item-diagn"
+                  >Діагностика</a
+                >
               </li>
               <li>
-                <a href="" data-translate="nav-item-chip"
-                  >Програмне тюнінгування</a
+                <a href="./air-conditioning.html" data-translate="nav-item-chip"
+                  >Автокондиционеры</a
                 >
               </li>
             </ul>
@@ -230,7 +229,7 @@
         <section class="hero-price-section">
           <div>
             <div class="hero-content">
-              <h1 class="hero-title" data-translate="hero-title-dvigatel">
+              <h1 class="hero-title" data-translate="hero-title-tormoznaya">
                 РЕМОНТ ТОРМОЗНОЙ СИСТЕМЫ
               </h1>
               <div class="hero-content-container">
@@ -249,7 +248,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-dvigatel1">
+                  <p data-translate="hero-content-tormoznaya1">
                     Проверка и замена ABS-датчиков.
                   </p>
                 </div>
@@ -268,7 +267,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-dvigatel2">
+                  <p data-translate="hero-content-tormoznaya2">
                     Замена тормозных колодок и дисков.
                   </p>
                 </div>
@@ -287,7 +286,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-dvigatel3">
+                  <p data-translate="hero-content-tormoznaya3">
                     Ремонт суппортов и замена цилиндров.
                   </p>
                 </div>
@@ -334,17 +333,17 @@
           </div>
         </section>
         <section class="gbo-section">
-          <h2 data-translate="dvigatel-section-title">
+          <h2 data-translate="tormoznaya-section-title">
             Ремонт тормозной системы автосервис в Павлограде
           </h2>
           <div class="main-gbo">
             <div class="main-gbo-content">
               <p>
-                <span class="gbo-span" data-translate="dvigatel-span"
+                <span class="gbo-span" data-translate="tormoznaya-span"
                   >Ваша безопасность на дороге начинается с исправной тормозной
                   системы! В нашем СТО “Каскад”
                 </span>
-                <span data-translate="dvigatel-span2">
+                <span data-translate="tormoznaya-span2">
                   мы проводим полную диагностику и ремонт тормозов любой
                   сложности. Наши мастера используют профессиональное
                   оборудование и качественные запчасти, чтобы обеспечить
@@ -367,8 +366,8 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list1"
-                    ><h3>Диагностика тормозной системы</h3></span
+                  <span data-translate="tormoznaya-list1"
+                    ><h3>Диагностика тормозной системы.</h3></span
                   >
                 </li>
                 <li>
@@ -386,7 +385,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list2"
+                  <span data-translate="tormoznaya-list2"
                     ><h3>
                       Замена тормозных колодок, дисков и барабанов.
                     </h3></span
@@ -407,7 +406,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list3"
+                  <span data-translate="tormoznaya-list3"
                     ><h3>
                       Ремонт суппортов, замена направляющих и поршней.
                     </h3></span
@@ -428,7 +427,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list4"
+                  <span data-translate="tormoznaya-list4"
                     ><h3>
                       Прокачка тормозной системы, замена тормозной жидкости.
                     </h3></span
@@ -449,7 +448,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list5"
+                  <span data-translate="tormoznaya-list5"
                     ><h3>Ремонт или замена тормозных цилиндров.</h3></span
                   >
                 </li>
@@ -570,7 +569,7 @@
               </li>
             </ul>
           </div>
-          <p class="dvigatel-span">
+          <p class="dvigatel-span" data-translate="tormoznaya-title-price">
             Прайс лист на ремонт тормозной системы в Павлограде СТО «Каскад»:
           </p>
           <table>
