--- a/remont-transmissii.html
+++ b/remont-transmissii.html
@@ -116,7 +116,7 @@
             <ul class="dropdown-content">
               <li>
                 <a
-                  href="./service-catalog.html#dvigatel"
+                  href="./remont-dvigatelya.html"
                   data-translate="nav-item-dvig"
                   >Двигун</a
                 >
@@ -128,39 +128,38 @@
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#electrika"
+                  href="./remont-elektriki.html"
                   data-translate="nav-item-elektro"
                   >Електрика</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#tormoznaja"
+                  href="./remont-tormoznoi-sistemy.html"
                   data-translate="nav-item-torm"
                   >Гальмівна система</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#transmisija"
+                  href="./remont-transmissii.html"
                   data-translate="nav-item-trans"
                   >Трансмісія</a
                 >
               </li>
               <li>
-                <a
-                  href="./service-catalog.html#servisnoe"
-                  data-translate="nav-item-to"
+                <a href="./technical-service.html" data-translate="nav-item-to"
                   >Технічне обслуговування</a
                 >
               </li>
-              <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li>
-                <a href="" data-translate="nav-item-diagn">Діагностика</a>
+                <a href="./car-diagnostics.html" data-translate="nav-item-diagn"
+                  >Діагностика</a
+                >
               </li>
               <li>
-                <a href="" data-translate="nav-item-chip"
-                  >Програмне тюнінгування</a
+                <a href="./air-conditioning.html" data-translate="nav-item-chip"
+                  >Автокондиционеры</a
                 >
               </li>
             </ul>
@@ -224,7 +223,7 @@
         <section class="hero-price-section">
           <div>
             <div class="hero-content">
-              <h1 class="hero-title" data-translate="hero-title-dvigatel">
+              <h1 class="hero-title" data-translate="hero-title-transmissiya">
                 РЕМОНТ ТРАНСМИССИИ В ПАВЛОГРАДЕ
               </h1>
               <div class="hero-content-container">
@@ -243,7 +242,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <h3 data-translate="hero-content-dvigatel1">
+                  <h3 data-translate="hero-content-transmissiya1">
                     Диагностика трансмиссии.
                   </h3>
                 </div>
@@ -262,7 +261,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <h3 data-translate="hero-content-dvigatel2">
+                  <h3 data-translate="hero-content-transmissiya2">
                     Замена сцепления.
                   </h3>
                 </div>
@@ -281,7 +280,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <h3 data-translate="hero-content-dvigatel3">
+                  <h3 data-translate="hero-content-transmissiya3">
                     Ремонт коробки передач.
                   </h3>
                 </div>
@@ -328,17 +327,17 @@
           </div>
         </section>
         <section class="gbo-section">
-          <h2 data-translate="dvigatel-section-title">
+          <h2 data-translate="transmissiya-section-title">
             Ремонт трансмиссии автосервис в Павлограде
           </h2>
           <div class="main-gbo">
             <div class="main-gbo-content">
               <p>
-                <span class="gbo-span" data-translate="dvigatel-span"
+                <span class="gbo-span" data-translate="transmissiya-span"
                   >Надежная трансмиссия – залог плавной и безопасной езды! В СТО
                   "Каскад"
                 </span>
-                <span data-translate="dvigatel-span2">
+                <span data-translate="transmissiya-span2">
                   выполняем полную диагностику и ремонт трансмиссии любой
                   сложности. Мы используем профессиональное оборудование и
                   оригинальные запчасти, чтобы вернуть вашему авто уверенность
@@ -361,7 +360,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list1"
+                  <span data-translate="transmissiya-list1"
                     ><h3>Замена ШРУСов и пыльников.</h3></span
                   >
                 </li>
@@ -380,7 +379,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list2"
+                  <span data-translate="transmissiya-list2"
                     ><h3>Ремонт раздаточной коробки и редукторов.</h3></span
                   >
                 </li>
@@ -399,7 +398,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list3"
+                  <span data-translate="transmissiya-list3"
                     ><h3>
                       Ремонт суппортов, замена направляющих и поршней.
                     </h3></span
@@ -420,7 +419,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list4"
+                  <span data-translate="transmissiya-list4"
                     ><h3>Обслуживание карданного вала.</h3></span
                   >
                 </li>
@@ -439,7 +438,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list5"
+                  <span data-translate="transmissiya-list5"
                     ><h3>Замена масла в КПП и редукторах.</h3></span
                   >
                 </li>
@@ -531,7 +530,7 @@
               </li>
             </ul>
           </div>
-          <p class="dvigatel-span">
+          <p class="dvigatel-span" data-translate="transmissiya-price-title">
             Прайс лист на ремонт системы сцепления в Павлограде СТО «Каскад»:
           </p>
           <table>
