--- a/ustanovka-gbo.html
+++ b/ustanovka-gbo.html
@@ -107,53 +107,50 @@
             <ul class="dropdown-content">
               <li>
                 <a
-                  href="./service-catalog.html#dvigatel"
+                  href="./remont-dvigatelya.html"
                   data-translate="nav-item-dvig"
                   >Двигун</a
                 >
               </li>
               <li>
-                <a
-                  href="./service-catalog.html#hodovka"
-                  data-translate="nav-item-hodov"
+                <a href="./remont-hodovoy.html" data-translate="nav-item-hodov"
                   >Ходова частина</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#electrika"
+                  href="./remont-elektriki.html"
                   data-translate="nav-item-elektro"
                   >Електрика</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#tormoznaja"
+                  href="./remont-tormoznoi-sistemy.html"
                   data-translate="nav-item-torm"
                   >Гальмівна система</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#transmisija"
+                  href="./remont-transmissii.html"
                   data-translate="nav-item-trans"
                   >Трансмісія</a
                 >
               </li>
               <li>
-                <a
-                  href="./service-catalog.html#servisnoe"
-                  data-translate="nav-item-to"
+                <a href="./technical-service.html" data-translate="nav-item-to"
                   >Технічне обслуговування</a
                 >
               </li>
-              <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li>
-                <a href="" data-translate="nav-item-diagn">Діагностика</a>
+                <a href="./car-diagnostics.html" data-translate="nav-item-diagn"
+                  >Діагностика</a
+                >
               </li>
               <li>
-                <a href="" data-translate="nav-item-chip"
-                  >Програмне тюнінгування</a
+                <a href="./air-conditioning.html" data-translate="nav-item-chip"
+                  >Автокондиционеры</a
                 >
               </li>
             </ul>
