--- a/car-diagnostics.html
+++ b/car-diagnostics.html
@@ -116,7 +116,7 @@
             <ul class="dropdown-content">
               <li>
                 <a
-                  href="./service-catalog.html#dvigatel"
+                  href="./remont-dvigatelya.html"
                   data-translate="nav-item-dvig"
                   >Двигун</a
                 >
@@ -128,39 +128,38 @@
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#electrika"
+                  href="./remont-elektriki.html"
                   data-translate="nav-item-elektro"
                   >Електрика</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#tormoznaja"
+                  href="./remont-tormoznoi-sistemy.html"
                   data-translate="nav-item-torm"
                   >Гальмівна система</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#transmisija"
+                  href="./remont-transmissii.html"
                   data-translate="nav-item-trans"
                   >Трансмісія</a
                 >
               </li>
               <li>
-                <a
-                  href="./service-catalog.html#servisnoe"
-                  data-translate="nav-item-to"
+                <a href="./technical-service.html" data-translate="nav-item-to"
                   >Технічне обслуговування</a
                 >
               </li>
-              <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li>
-                <a href="" data-translate="nav-item-diagn">Діагностика</a>
+                <a href="./car-diagnostics.html" data-translate="nav-item-diagn"
+                  >Діагностика</a
+                >
               </li>
               <li>
-                <a href="" data-translate="nav-item-chip"
-                  >Програмне тюнінгування</a
+                <a href="./air-conditioning.html" data-translate="nav-item-chip"
+                  >Автокондиционеры</a
                 >
               </li>
             </ul>
@@ -224,7 +223,7 @@
         <section class="hero-price-section">
           <div>
             <div class="hero-content">
-              <h1 class="hero-title" data-translate="hero-title-dvigatel">
+              <h1 class="hero-title" data-translate="hero-title-diagnostics">
                 Компьютерная диагностика автомобиля
               </h1>
               <div class="hero-content-container">
@@ -243,7 +242,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <h3 data-translate="hero-content-dvigatel1">
+                  <h3 data-translate="hero-content-diagnostics1">
                     Компьютерная диагностика двигателя.
                   </h3>
                 </div>
@@ -262,7 +261,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <h3 data-translate="hero-content-dvigatel2">
+                  <h3 data-translate="hero-content-diagnostics2">
                     Диагностика электронных систем.
                   </h3>
                 </div>
@@ -281,7 +280,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <h3 data-translate="hero-content-dvigatel3">
+                  <h3 data-translate="hero-content-diagnostics3">
                     Диагностика АКПП.
                   </h3>
                 </div>
@@ -328,17 +327,17 @@
           </div>
         </section>
         <section class="gbo-section">
-          <h2 data-translate="dvigatel-section-title">
+          <h2 data-translate="diagnostics-section-title">
             Профессиональная диагностика автомобилей
           </h2>
           <div class="main-gbo">
             <div class="main-gbo-content">
               <p>
-                <span class="gbo-span" data-translate="dvigatel-span"
+                <span class="gbo-span" data-translate="diagnostics-span"
                   >Выявим скрытые неисправности до их превращения в серьезные
                   поломки!
                 </span>
-                <span data-translate="dvigatel-span2">
+                <span data-translate="diagnostics-span2">
                   В автосервисе «Каскад» проводим полную компьютерную
                   диагностику всех систем автомобиля с использованием
                   профессионального сканирующего оборудования. Современная
@@ -362,7 +361,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list1"
+                  <span data-translate="diagnostics-list1"
                     ><h3>Замена моторного масла и фильтров.</h3></span
                   >
                 </li>
@@ -381,7 +380,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list2"
+                  <span data-translate="diagnostics-list2"
                     ><h3>Проверка и замена технических жидкостей.</h3></span
                   >
                 </li>
@@ -400,7 +399,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list3"
+                  <span data-translate="diagnostics-list3"
                     ><h3>Проверка системы зажигания.</h3></span
                   >
                 </li>
@@ -419,7 +418,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list4"
+                  <span data-translate="diagnostics-list4"
                     ><h3>Осмотр рулевого управления.</h3></span
                   >
                 </li>
@@ -438,7 +437,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list5"
+                  <span data-translate="diagnostics-list5"
                     ><h3>Контроль состояния ремней и цепей ГРМ.</h3></span
                   >
                 </li>
