--- a/remont-elektriki.html
+++ b/remont-elektriki.html
@@ -116,7 +116,7 @@
             <ul class="dropdown-content">
               <li>
                 <a
-                  href="./service-catalog.html#dvigatel"
+                  href="./remont-dvigatelya.html"
                   data-translate="nav-item-dvig"
                   >Двигун</a
                 >
@@ -128,39 +128,38 @@
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#electrika"
+                  href="./remont-elektriki.html"
                   data-translate="nav-item-elektro"
                   >Електрика</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#tormoznaja"
+                  href="./remont-tormoznoi-sistemy.html"
                   data-translate="nav-item-torm"
                   >Гальмівна система</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#transmisija"
+                  href="./remont-transmissii.html"
                   data-translate="nav-item-trans"
                   >Трансмісія</a
                 >
               </li>
               <li>
-                <a
-                  href="./service-catalog.html#servisnoe"
-                  data-translate="nav-item-to"
+                <a href="./technical-service.html" data-translate="nav-item-to"
                   >Технічне обслуговування</a
                 >
               </li>
-              <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li>
-                <a href="" data-translate="nav-item-diagn">Діагностика</a>
+                <a href="./car-diagnostics.html" data-translate="nav-item-diagn"
+                  >Діагностика</a
+                >
               </li>
               <li>
-                <a href="" data-translate="nav-item-chip"
-                  >Програмне тюнінгування</a
+                <a href="./air-conditioning.html" data-translate="nav-item-chip"
+                  >Автокондиционеры</a
                 >
               </li>
             </ul>
@@ -224,7 +223,7 @@
         <section class="hero-price-section">
           <div>
             <div class="hero-content">
-              <h1 class="hero-title" data-translate="hero-title-dvigatel">
+              <h1 class="hero-title" data-translate="hero-title-electrika">
                 РЕМОНТ АВТОЭЛЕКТРИКИ В ПАВЛОГРАДЕ
               </h1>
               <div class="hero-content-container">
@@ -243,7 +242,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-dvigatel1">
+                  <p data-translate="hero-content-electrika1">
                     Ремонт и замена блоков управления.
                   </p>
                 </div>
@@ -262,7 +261,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-dvigatel2">
+                  <p data-translate="hero-content-electrika2">
                     Диагностика генератора и стартера.
                   </p>
                 </div>
@@ -281,7 +280,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-dvigatel3">
+                  <p data-translate="hero-content-electrika3">
                     Устранение проблем с проводкой.
                   </p>
                 </div>
@@ -328,16 +327,16 @@
           </div>
         </section>
         <section class="gbo-section">
-          <h2 data-translate="dvigatel-section-title">
-            Ремонт ходовой на «АС КАСКАД»
+          <h2 data-translate="electrika-section-title">
+            Диагностика и ремонт автоэлектрики
           </h2>
           <div class="main-gbo">
             <div class="main-gbo-content">
               <p>
-                <span class="gbo-span" data-translate="dvigatel-span"
+                <span class="gbo-span" data-translate="electrika-span"
                   >В нашем СТО “Каскад”
                 </span>
-                <span data-translate="dvigatel-span2">
+                <span data-translate="electrika-span2">
                   в Павлограде вы можете провести полную диагностику и ремонт
                   автоэлектрики любой сложности. Мы выполняем поиск и устранение
                   неисправностей проводки, ремонт генераторов и стартеров,
@@ -364,7 +363,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list1"
+                  <span data-translate="electrika-list1"
                     ><h3>
                       Диагностика электропроводки и устранение замыканий
                     </h3></span
@@ -385,7 +384,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list2"
+                  <span data-translate="electrika-list2"
                     ><h3>Ремонт и замена генераторов и стартеров.</h3></span
                   >
                 </li>
@@ -404,7 +403,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list3"
+                  <span data-translate="electrika-list3"
                     ><h3>Поиск и устранение ошибок блоков управления.</h3></span
                   >
                 </li>
@@ -423,7 +422,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list4"
+                  <span data-translate="electrika-list4"
                     ><h3>
                       Установка и подключение фар, противотуманок, ДХО.
                     </h3></span
@@ -444,7 +443,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <span data-translate="dvigatel-list5"
+                  <span data-translate="electrika-list5"
                     ><h3>Проверка и замена аккумуляторов и реле.</h3></span
                   >
                 </li>
@@ -537,7 +536,7 @@
               </li>
             </ul>
           </div>
-          <p class="dvigatel-span">
+          <p class="dvigatel-span" data-translate="electrika-title-price">
             Прайс лист на ремонт автоэлектрики в Павлограде СТО «Каскад»:
           </p>
           <table>
