--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
               <h3 data-translate="hero-contact-div-map">
                 Едь к нам прямо сейчас:
               </h3>
-              <iframe
+              <!-- <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.1671695603704!2d35.83380167638042!3d48.53002797128957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40deb744fd3bfc69%3A0x36392c7691b6bb0d!2z0KHQotCeINCa0LDRgdC60LDQtA!5e0!3m2!1sru!2sua!4v1749836072193!5m2!1sru!2sua"
                 width="250"
                 height="200"
@@ -328,7 +328,20 @@
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
+              ></iframe> -->
+              <div class="map-container">
+                <div class="map-placeholder" id="mapPlaceholder">
+                  <img
+                    src="./src/img/map-img.webp"
+                    alt="Локация автосервиса Каскад"
+                    loading="lazy"
+                    class="static-map"
+                  />
+                  <div class="map-overlay">
+                    <button class="load-map-btn">Показать карту</button>
+                  </div>
+                </div>
+              </div>
               <div class="hero-contact-number">
                 <h3 data-translate="hero-contact-div-number">
                   Ждем твоего звонка:
