--- a/parts.html
+++ b/parts.html
@@ -74,6 +74,7 @@
     <!-- Scripts -->
     <script src="./src/js/main.js" defer></script>
     <script src="./src/js/language.js" defer></script>
+    <script src="./src/js/carousel-parts.js" defer></script>
   </head>
   <header id="header" class="header">
     <div class="header-container">
