--- a/price.html
+++ b/price.html
@@ -69,6 +69,7 @@
     <!-- Scripts -->
     <script src="./src/js/main.js" defer></script>
     <script src="./src/js/language.js" defer></script>
+    <script src="./src/js/services-carousel.js" defer></script>
   </head>
   <header id="header" class="header">
     <div class="header-container">
